<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
-->
    <ImageView
        android:id="@+id/compImageView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/the_hand_chosen_by_the_computer"
        android:scaleType="fitCenter"
        android:src="@drawable/rock"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="39dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="42dp"
        android:layout_marginRight="42dp" />

    <TextView
        android:id="@+id/compMoveTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/none"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/compImageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/winnerTextView"
        android:layout_width="83dp"
        android:layout_height="28dp"
        android:layout_marginTop="74dp"
        android:text="@string/waiting"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintLeft_toRightOf="@+id/winnerLabelTextView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compImageView"
        tools:layout_editor_absoluteX="241dp" />

    <TextView
        android:id="@+id/winnerLabelTextView"
        android:layout_width="99dp"
        android:layout_height="25dp"
        android:layout_marginTop="74dp"
        android:text="@string/winner"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/winnerTextView"
        app:layout_constraintTop_toBottomOf="@+id/compImageView"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>